force-app/main/default/objects/InitialOffer__c/InitialOffer__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Oferta Inicial</label>
</CustomObject>