force-app/main/default/objects/InitialOffer__c/fields/BroadbandSpeed__c.field-meta.xml
<CustomField>
    <fullName>BroadbandSpeed__c</fullName>
    <label>Velocidade Banda Larga</label>
    <length>10</length>
    <type>Text</type>
</CustomField>