force-app/main/default/objects/InitialOffer__c/fields/OfferGroup__c.field-meta.xml
<CustomField>
    <fullName>OfferGroup__c</fullName>
    <label>Grupo da Oferta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>