force-app/main/default/objects/InitialOffer__c/fields/Tecnology__c.field-meta.xml
<CustomField>
    <fullName>Tecnology__c</fullName>
    <label>Tecnologia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>