force-app/main/default/objects/InitialOffer__c/fields/TvPlanName__c.field-meta.xml
<CustomField>
    <fullName>TvPlanName__c</fullName>
    <label>Nome do Plano de TV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>