force-app/main/default/objects/InitialOffer__c/fields/VoicePlan__c.field-meta.xml
<CustomField>
    <fullName>VoicePlan__c</fullName>
    <label>Plano de Voz</label>
    <length>100</length>
    <type>Text</type>
</CustomField>